--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Flashcard</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&family=Titan+One&display=swap" rel="stylesheet">
+ <title>Flashcard</title>
 </head>
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+            <!-- <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -19,44 +22,17 @@
                         <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>O CSS é uma linguagem de estilização</p>
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>O CSS é uma linguagem de estilização</p>
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação 2.0</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>0 que é JavaScript?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>0 JavaScript é uma linguagem de programação</p>
-                    </div>
-                </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos :D</p>
-    </footer>
+
+
+    </footer><script src="app.js"></script>
+    <script src="perguntas.js"></script>
+    
+
+
 </body>
 </html>
